<resources>
    <string name="app_name">JURANI</string>
    <string name="app_text">Jujur atau Berani?</string>
    <string name="action_truth">Jujur</string>
    <string name="action_dare">Berani</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_developer">Developer</string>
    <string name="action_reset">Reset</string>
    <string name="action_next">Selanjutnya</string>
    <string name="action_close">Tutup</string>
    <string name="action_stop">Berhenti</string>
    <string name="action_repeat">Ulang</string>
    <string name="text_count_en">How many are you?</string>
    <string name="text_count_id">Masukkan jumlah pemain</string>
    <string name="text_dare_en">I dare you to...</string>
    <string name="text_dare_id">Yang dapat giliran harus...</string>
    <string name="text_truth_en">Be honest about...</string>
    <string name="text_truth_id">Yang dapat giliran harus jujur tentang...</string>
    <string name="text_who_play">Who are playing?</string>
    <string name="text_nama">Masukkan nama pemain</string>
    <string name="text_rolling">Keep it rolling</string>
    <string name="text_turn_id">Yang harus jurani adalah...</string>
    <string name="text_turn_en">And the turn goes to...</string>
    <string name="target">Your target is...</string>
    <string name="alphabet">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
</resources>
