<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.papier.jurani.PlayerInputActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/player_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/AppTheme"/>

    <!--Linear Layout just for disguising-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"></LinearLayout>

    <TextView
        android:id="@+id/player_parent_text"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:textSize="21dp"
        android:textStyle="bold"
        android:fontFamily=""
        android:text="@string/text_who_play" />

    <TextView
        android:id="@+id/player_child_text"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:layout_marginTop="7dp"
        android:textSize="16dp"
        android:text="@string/text_nama" />

    <EditText
        android:id="@+id/input_name"
        android:background="@color/colorTextBase"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:singleLine="true"
        android:digits="@string/alphabet"
        android:textSize="21dp"
        android:textStyle="bold" />

    <!--Linear Layout just for disguising-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"></LinearLayout>

    <Button
        android:id="@+id/next_button_player"
        android:background="@drawable/button_next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/action_next"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
