<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.papier.jurani.RandomPlayerActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/random_player_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/AppTheme"/>

    <TextView
        android:id="@+id/parent_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21dp"
        android:textStyle="bold"
        android:fontFamily=""
        android:text="@string/text_rolling" />

    <TextView
        android:id="@+id/child_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13dp"
        android:text="@string/text_turn_id" />

    <TextView
        android:id="@+id/random_name"
        android:background="#FFFFFF"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="21dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/stop_button_player"
        android:layout_marginTop="27dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/action_stop"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
