<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.papier.jurani.ChosenPlayerActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/random_player_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/AppTheme"/>

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21dp"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:fontFamily=""
        android:text="@string/text_turn_en" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/colorText"
        android:text="@string/text_turn_id" />

    <TextView
        android:id="@+id/chosen_name"
        android:background="@color/colorTextBase"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="21dp"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>

    <!--Linear Layout just for disguising-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"></LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:id="@+id/truth_button"
            android:background="@drawable/button_truth"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/action_truth"
            android:textSize="20dp"
            android:textColor="@color/colorTextBase"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/dare_button"
            android:background="@drawable/button_dare"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/action_dare"
            android:textSize="20dp"
            android:textColor="@color/colorTextBase"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


</LinearLayout>
