<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.papier.jurani.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/count_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/AppTheme"/>

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21dp"
        android:textStyle="bold"
        android:fontFamily=""
        android:text="@string/text_count_en" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_height="wrap_content"
        android:textSize="13dp"
        android:text="@string/text_count_id" />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/min_count"
            android:background="@color/colorPrimary"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:textSize="30dp"
            android:textStyle="bold"
            android:text="-" />

        <TextView
            android:id="@+id/count"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="100dp"
            android:text="2" />

        <Button
            android:id="@+id/plus_count"
            android:background="@color/colorPrimary"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:textSize="30dp"
            android:textStyle="bold"
            android:text="+"/>

    </LinearLayout>

    <Button
        android:id="@+id/next_button_count"
        android:layout_marginTop="5dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/action_next"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
